@@ -1,3 +1,9 @@
+2002-03-26  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* gconf/gconftool.c: (main): back from HEAD (honor
+	GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL to do nothing for
+	--makefile-install-mode)
+
 2002-03-23  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconfd.c (gconf_main): change exit timeout to 2 minutes
